tests/testFiles/semanticErrors/ifwithnonbooleanconditional.meme
I don't always (10) but when I do {
}
